<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asumi.hondana_app_new.MyPageEditActivity">

    <!--ユーザーアイコン-->
    <ImageView
        android:id="@+id/imgBookDetail"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/usericon"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:adjustViewBounds="true" />

    <!--ユーザー名編集-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editTextName"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_alignTop="@+id/imgBookDetail"
        android:layout_toEndOf="@+id/imgBookDetail"
        android:layout_marginTop="30dp" />

    <!--ユーザー紹介文編集-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextProfile"
        android:hint="@string/editTextProfile"
        android:layout_below="@+id/imgBookDetail"
        android:layout_alignStart="@+id/buttonMyPageEdit"
        android:layout_alignEnd="@+id/buttonMyPageEdit" />

    <!--変更するボタン-->
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonMyPageEdit"
        android:id="@+id/buttonMyPageEdit"
        android:layout_gravity="center_horizontal"
        android:background="#52AE93"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:maxLength="140"
        android:layout_marginBottom="75dp" />"
    android:layout_marginTop="74dp"
    android:layout_below="@+id/editTextProfile"
    android:layout_centerHorizontal="true" />

</RelativeLayout>
