<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_margin="4dp">


        <!--本の画像を表示-->
        <ImageView
            android:id="@+id/imgBookDetail"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/changedesign"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <!--タイトル-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleBookDetailPerson"
                android:id="@+id/titleBookDetailPerson"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp" />

            <!--作者-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorBookDetailPerson"
                android:id="@+id/textView_issueDate"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp" />

        </LinearLayout>

    </LinearLayout>



    <!--本の状態を表示-->
    <ListView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/listView1"
        android:layout_weight="0.3" />



    <!--交換するボタン-->
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonRequestPerson"
        android:id="@+id/buttonRequestPerson"
        android:background="#52AE93"/>


</LinearLayout>
